--- a/data/3.html
+++ b/data/3.html
@@ -1,77 +1,99 @@
 <link rel="stylesheet" type="text/css" href="css/3.css">
 
-	<div class="projecttitle">
-		<h2>
-			Aerodynamics Club
-		</h2>
-	</div>
+    <div class="projecttitle">
+        <h2>
+            Aerodynamics Club
+        </h2>
+    </div>
 
-	<div class="projecttilescontainer">
-		<div class="imgplaceholder">
-			<div class="darken">
-				<img class="iframeholder" src="images/3/main.jpg" style="cursor:pointer" />
-			</div>
-			<div class="middleimg">
-				<img class="play" src="images/play.png" style="cursor:pointer" />
-			</div>
-		</div>
-		<iframe class="interactive"
-		src="#">
-		</iframe>
+    <div class="projecttilescontainer">
+        <div class="imagemidw">
+            <div class="imgplaceholder">
+                <div class="darken">
+                    <img class="iframeholder" src="images/3/main.jpg" style="cursor:pointer" />
+                </div>
+                <div class="middleimg">
+                    <img class="play" src="images/play.png" style="cursor:pointer" />
+                </div>
+            </div>
+        </div>
+        <iframe id="interactive"
+        src="#">
+        </iframe>
 
-		<p>
-			The Aerodynamics club is a
-		</p>
-	</div>
+        <div class="introduction">
+                <ul class="detaillist">
+                  <li><b>Role:</b> Coordinator</li>
+                  <li><b>Location:</b> BITS Goa</li>
+                  <li><b>Duration:</b> 1 Year</li>
+                  <li><b>Tools:</b> C++, Speed Controllers, IMU, XFLR</li>
+                  <li><b>Keywords:</b> Aerodynamics, Electronics, Control Systems, Robotics, Flight</li>
+                </ul>
+            <br/>
+            <p>
+                In this project, a shared map was built for a multi-robot system.  This client-server system automatically calculates transformation between different coordinate frames.  Building the map includes:
+                <ul class="inlist">
+                  <li>Localizing the robot in 3D from a perched camera</li>
+                  <li>Particle filter for SLAM and to fuse information</li>
+                  <li>Shared map is built by the server and sent to all the clients</li>
+                </ul>  
+            </p>
+            <p>
+                The shared map allows the robots to interact with each other and share their eyes.
+                The video above shows a small application of the dynamic map built by Cozmo.
+                With no prior information about the walls, Cozmo is able to <b>SEE</b> them and cruise through to the target.
+            </p>
+        </div>
+    </div>
 
-	<div class="projecttiles invisiblepage">
-		<table>
-		  <tr>
-		    <th><img class="left" src="images/3/cicada.jpg"></th>
-		    <th class="righttext"> 
-		    	The Cicada is a Y-Hexacopter built to lift heavy cameras for mesmerizing aerial shots.
-		    	<br/>
-		    	<br/>
-		    	Like all our crafts, this was built from scratch, including the wodden frame.
-				<br style="clear: both;" />
-			</th> 
-		  </tr>
-		</table>
-	</div>
+    <div class="projecttiles invisiblepage">
+        <table>
+          <tr>
+            <th class="lefttext">
+                Hydra, a micro-quadcopter, with coreless DC motors.
+                <br/>
+                <br/>
+                Designed by our members and printed using our in-house 3D printer.
+                <br style="clear: both;" />
+            </th>
+            <th><img class="right" src="images/3/nano.jpeg"></th>
+          </tr>
+        </table>
+    </div>
 
-	<div class="projecttiles invisiblepage">
-		<table>
-		  <tr>
-		    <th class="lefttext">
-		    	The Hydra was our micro-quadcopter, with coreless DC motors.
-		    	<br/>
-		    	<br/>
-		    	The body was designed by our members and printed using our custom 3D printer.
-				<br style="clear: both;" />
-			</th>
-		    <th><img class="right" src="images/3/nano.jpeg"></th>
-		  </tr>
-		</table>
-	</div>
+    <div class="projecttiles invisiblepage">
+        <table>
+          <tr>
+            <th><img class="left" src="images/3/cicada.jpg"></th>
+            <th class="righttext"> 
+                Cicada, a Y-Hexacopter built to lift heavy cameras for mesmerizing aerial shots.
+                <br/>
+                <br/>
+                Like all our crafts, this was built from scratch, including the wooden frame.
+                <br style="clear: both;" />
+            </th> 
+          </tr>
+        </table>
+    </div>
 
-	<div class="projecttiles invisiblepage">
-		<table>
-		  <tr>
-		    <th><img class="left" src="images/3/boom.jpeg"></th>
-		    <th class="righttext"> 
-		    	The Inverted V-tail twin boom plane was built by all the participants in our annual workshop.
-		    	<br/>
-		    	<br/>
-		    	This glider that was designed to be slow and easy to fly, perfect for newbie flyers.
-				<br style="clear: both;" />
-			</th> 
-		  </tr>
-		</table>
-	</div>
+    <div class="projecttiles invisiblepage">
+        <table>
+          <tr>
+            <th><img class="left" src="images/3/boom.jpeg"></th>
+            <th class="righttext"> 
+                Inverted V-tail twin boom plane, built by all the participants in the annual workshop.
+                <br/>
+                <br/>
+                This glider was designed to be slow and easy to fly, perfect for newbie flyers.
+                <br style="clear: both;" />
+            </th> 
+          </tr>
+        </table>
+    </div>
 
-	<div class="projecttiles">
-		<p>Updated events and details can be found <a href="https://www.facebook.com/groups/aerodbitsgoa">here</a> </p>
-	</div>
+    <div class="projecttiles">
+        <p>Updated events and details can be found <a href="https://www.facebook.com/groups/aerodbitsgoa">here</a> </p>
+    </div>
 
 <script  src="js/3.js" ></script>
 </body>
