--- a/data/4.html
+++ b/data/4.html
@@ -1,9 +1,15 @@
 <link rel="stylesheet" type="text/css" href="css/4.css">
 
-
-	<div class="projecttilescontainer">
-		<iframe class="interactive" src="data/interactiveplaceholder.html"> </iframe>
+	<div class="projecttiles invisiblepage">
+		<img src="images/4/4.jpg">
 	</div>
 
+	<div class="projecttiles invisiblepage">
+		<img src="images/4/300000.png">
+	</div>
+	<div class="projecttiles invisiblepage">
+		<img src="images/4/cnn.png">
+	</div>
 
 <script  src="js/4.js" ></script>
+</body>
