--- a/data/5.html
+++ b/data/5.html
@@ -1,25 +1,130 @@
 <link rel="stylesheet" type="text/css" href="css/5.css">
 
-	<div class="projecttiles invisiblepage">
-		<img src="images/5/har.png">
-	</div>
+    <div class="projecttitle">
+        <h2>
+            Surface Ion Trap
+        </h2>
+    </div>
 
-	<div class="projecttiles invisiblepage">
-		<img src="images/5/cham.png">
-	</div>
+    <div class="projecttilescontainer">
+        <div class="imagemidw">
+            <div class="imgplaceholder">
+                <div class="darken">
+                    <img class="iframeholder" src="images/5/main.jpg" style="cursor:pointer" />
+                </div>
+                <div class="middleimg">
+                    <img class="play" src="images/play.png" style="cursor:pointer" />
+                </div>
+            </div>
+        </div>
+        <iframe id="interactive"
+        src="#">
+        </iframe>
 
-	<div class="projecttiles invisiblepage">
-		<img src="images/5/bake.png">
-	</div>
+        <div class="introduction">
+                <ul class="detaillist">
+                  <li><b>Supervisor:</b> Vasant Natarajan</li>
+                  <li><b>Role:</b> Research Intern</li>
+                  <li><b>Location:</b> Indian Institute of Science</li>
+                  <li><b>Duration:</b> 2 months</li>
+                  <li><b>Tools:</b> LabView, Optics, Lasers</li>
+                  <li><b>Keywords:</b> Quantum Computing, Paul Trap, Electrodynamics</li>
+                </ul>
+            <br/>
+            <p>
+                Quantum Computing is taking the world by storm. It can reduce problems that require exponential time to polynomial time problems.
+                In Quantum computers, the state of the system is encoded in units called qubits. Ion traps are one of the many methods to build a qubit.
+                It traps a single Calcium ion in a dynamic electric field. The steps to build an ion trap are:
 
-	<div class="projecttiles invisiblepage">
-		<img src="images/5/cyl.png">
-	</div>
+                <ul class="inlist">
+                  <li>Build a vacuum chamber which can hold 10<sup>-10</sup> Torr</li>
+                  <li>Evacuate the chamber of all particles using turbopumps, ton pumps and baking</li>
+                  <li>Activate the Paul trap in the vacuum and shoot Calcium ions to be trapped</li>
+                  <li>Perform quantum gate operations on this ion using a laser</li>
+                </ul>  
+            </p>
+            <p>
+                The experimental setup is extremely sensitive. Even a single stray speck of dust can throw the system into disarray.
+                The video above shows an experiment by Caltech trapping pollen with a Paul trap.
+            </p>
+        </div>
+    </div>
 
-	<div class="projecttiles invisiblepage">
-		<img src="images/5/trap.png">
-	</div>
+    <div class="projecttiles invisiblepage">
+        <table>
+          <tr>
+            <th><img class="left" src="images/5/har.png"></th>
+            <th class="righttext"> 
+                The potential well created by a Paultrap traps the ion at the stable equilibrium point.
+                <br style="clear: both;" />
+            </th> 
+          </tr>
+        </table>
+    </div>
 
+    <div class="projecttiles invisiblepage">
+        <table>
+          <tr>
+            <th class="lefttext">
+                The following is a cross-section of the linear Paul trap. High-frequency AC voltage, creates the stable potential well.
+                <br style="clear: both;" />
+            </th>
+            <th><img class="right" src="images/5/cyl.png"></th>
+          </tr>
+        </table>
+    </div>
+
+    <div class="projecttiles invisiblepage">
+        <table>
+          <tr>
+            <th><img class="left" src="images/5/cham.png"></th>
+            <th class="righttext"> 
+                The chamber was set up with the trap at the center. Multiple laser frequencies were required to excite the ion to its meta-stable state.
+                <br style="clear: both;" />
+            </th> 
+          </tr>
+        </table>
+    </div>
+
+    <div class="projecttiles invisiblepage">
+        <table>
+          <tr>
+            <th class="lefttext">
+                The Bastille trap was etched in copper. Various electrodes were set up via gold wire bonds to control the shape of the well.
+                <br style="clear: both;" />
+            </th>
+            <th><img class="right" src="images/5/trap.jpg"></th>
+          </tr>
+        </table>
+    </div>
+
+    <div class="projecttiles invisiblepage">
+        <table>
+          <tr>
+            <th><img class="left" src="images/5/soft.jpg"></th>
+            <th class="righttext"> 
+                The parameters of the well were controlled with a LabVIEW precision voltage unit.
+                <br style="clear: both;" />
+            </th> 
+          </tr>
+        </table>
+    </div>
+
+    <div class="projecttiles invisiblepage">
+        <table>
+          <tr>
+            <th class="lefttext">
+                We were the first group in India to successfully trap ions.
+                <br style="clear: both;" />
+            </th>
+            <th><img class="right" src="images/5/pic4.png"></th>
+          </tr>
+        </table>
+    </div>
+
+    <div class="projecttiles">
+        <p>More details are described in this <a href="pdf/Ion_traps.pdf">report</a> </p>
+    </div>
 
 <script  src="js/5.js" ></script>
 </body>
