--- a/data/6.html
+++ b/data/6.html
@@ -1,15 +1,9 @@
 <link rel="stylesheet" type="text/css" href="css/6.css">
 
-	<div class="projecttiles invisiblepage">
-		<img src="images/6/4.jpg">
+
+	<div class="projecttilescontainer">
+		<iframe class="interactive" src="data/interactiveplaceholder.html"> </iframe>
 	</div>
 
-	<div class="projecttiles invisiblepage">
-		<img src="images/6/300000.png">
-	</div>
-	<div class="projecttiles invisiblepage">
-		<img src="images/6/cnn.png">
-	</div>
 
 <script  src="js/6.js" ></script>
-</body>
