--- a/index.html
+++ b/index.html
@@ -52,13 +52,22 @@
 			<div  id="about" class="inactivepage">
 				<div class="whitetiles"> 
 						<img src="images/fez.jpg" style="float:right;">
-						<p> 
-						Self-professed geek, avid reader and gamer. Passionate about vison, robotics, learning and physics. <br/>
-						Pursuing a dual degree in Computer Science and Physics at BITS Goa, India.<br/>
-						Currently working at Microsoft's Big Data Team, Bangalore.<br/>
-						Joining Carnegie Mellon University's Computer Vision program.<br/><br/>
-
-						Uses the picture on the left (FEZ) on all platforms.
+						<p>
+						I'm an aspiring computer vision researcher, an avid reader, and a gamer. Additionally, I'm passionate about robotics, machine learning, and physics. I'm currently a senior pursuing Computer Science and Physics at BITS Pilani, India. Concurrently, I'm a part of Microsoft's Big Data Team in Bangalore, India and will be joining Carnegie Mellon University's Masters in Computer Vision program this Fall.
+						<br/>
+						<br/>
+						I'm paranoid about anonymity and hence use the picture on the right (FEZ) on all platforms. 
+						<br/>
+						<br/>
+						Following is a list of games I think everybody should try.
+							<ul>
+								<li>Bioshock Infinite</li>
+								<li>FEZ</li>
+								<li>Okami HD</li>
+								<li>Ori and the Blind Forest</li>
+								<li>Pony Island</li>
+								<li>Portal 2</li>
+							</ul>
 						</p>
 
 				</div>
@@ -75,8 +84,8 @@
 		<script>
 			var text = "";
 			var i;
-			var abstract = ["Shared World Map", "eLISA Simulation", "AeroD", "Molecular Dynamics", "Ion Trap", "Website (gets meta)"];
-			for (i = 1; i < 7; i++) {
+			var abstract = ["Shared World Map", "eLISA Simulation", "AeroD", "Molecular Dynamics", "Ion Trap", "Computer Tomography", "Website (meta)"];
+			for (i = 1; i < 8; i++) {
 			    text += "<div id=\"tile"+i+"\" class=\"tiles\" data-projectid="+i+"> <img id=\"tileimg\" src=\"images/"+i+"/main.jpg\" alt=\"tile\"/> <div class=\"middle\"> <div class=\"text\">"+abstract[i-1]+"</div> </div> </div>"
 			}
 
