--- a/data/6.html
+++ b/data/6.html
@@ -1,9 +1,125 @@
 <link rel="stylesheet" type="text/css" href="css/6.css">
 
+    <div class="projecttitle">
+        <h2>
+            Computer Tomography
+        </h2>
+    </div>
 
-	<div class="projecttilescontainer">
-		<iframe class="interactive" src="data/interactiveplaceholder.html"> </iframe>
-	</div>
+    <div class="projecttilescontainer">
+        <video controls>
+          <source src="videos/sklve.ogg" type="video/ogg">
+          Your browser does not support HTML5 video.
+        </video>
 
+        <div class="introduction">
+                <ul class="detaillist">
+                  <li><b>Supervisor:</b> Arun Muthu</li>
+                  <li><b>Role:</b> Research Intern</li>
+                  <li><b>Location:</b> Indira Gandhi Centre for Atomic Research</li>
+                  <li><b>Duration:</b> 2 months</li>
+                  <li><b>Tools:</b> MATLAB, ImageJ</li>
+                  <li><b>Keywords:</b> X-ray Tomography, Optics, Non-destructive testing</li>
+                </ul>
+            <br/>
+            <p>
+                In this project, a shared map was built for a multi-robot system. This client-server system automatically calculates transformation between different coordinate frames.  Building the map includes:
+                <ul class="inlist">
+                  <li>Localizing the robot in 3D from a perched camera</li>
+                  <li>Particle filter for SLAM and to fuse information</li>
+                  <li>A Shared map is built by the server and sent to all the clients</li>
+                </ul>  
+            </p>
+            <p>
+                The shared map allows the robots to interact with each other and share their eyes.
+                The video above shows a small application of the dynamic map built by Cozmo.
+                With no prior information about the walls, Cozmo is able to <b>SEE</b> them and cruise through to the target.
+            </p>
+        </div>
+    </div>
+
+    <div class="projecttiles invisiblepage">
+        <table>
+          <tr>
+            <th><img class="left" src="images/6/theo.png"></th>
+            <th class="righttext"> 
+                Using geometry based computer vision, the positions of Aruco markers were calculated from monocular cameras.
+                <br style="clear: both;" />
+            </th> 
+          </tr>
+        </table>
+    </div>
+
+    <div class="projecttiles invisiblepage">
+        <table>
+          <tr>
+            <th class="lefttext">
+                Aruco markers were attached to the robots for pose estimation.
+                <br style="clear: both;" />
+            </th>
+            <th><img class="right" src="images/6/cir.png"></th>
+          </tr>
+        </table>
+    </div>
+
+    <div class="projecttiles invisiblepage">
+        <table>
+          <tr>
+            <th><img class="left" src="images/6/ell.png"></th>
+            <th class="righttext"> 
+                Information from multiple cameras was sent over the network to a server to build a Map of the robot environment.
+                <br/>
+                <br/>
+                No prior information about the location of the cameras or the robots is needed.
+                <br style="clear: both;" />
+            </th> 
+          </tr>
+        </table>
+    </div>
+
+    <div class="projecttiles invisiblepage">
+        <table>
+          <tr>
+            <th class="lefttext">
+                Odometry readings and camera information were fused using a Rao-Backwellized particle filter for extremely accurate estimates.
+                <br/>
+                <br/>
+                This SLAM algorithm increases accuracy the longer the system runs.
+                <br style="clear: both;" />
+            </th>
+            <th><img class="right" src="images/6/off.png"></th>
+          </tr>
+        </table>
+    </div>
+
+    <div class="projecttiles invisiblepage">
+        <table>
+          <tr>
+            <th><img class="left" src="images/6/cross.gif"></th>
+            <th class="righttext"> 
+                Here the SLAM algorithm was used to locate the walls, only using Cozmo’s camera and movement.
+                <br style="clear: both;" />
+            </th> 
+          </tr>
+        </table>
+    </div>
+
+    <div class="projecttiles invisiblepage">
+        <table>
+          <tr>
+            <th class="lefttext">
+                Ground truth vs Estimated map.
+                Although the Server robot cannot see the walls, it shares its eyes with the client robots and can thus see beyond its normal sight.
+                <br style="clear: both;" />
+            </th>
+            <th><img class="right" src="images/6/gu2.jpg"></th>
+          </tr>
+        </table>
+    </div>
+
+    <div class="projecttiles">
+        <p>More details are described in this <a href="pdf/conebeam.pdf">report</a> </p>
+    </div>
 
 <script  src="js/6.js" ></script>
+</body>
